CREATE TABLE "catalogo_de_zonas" (
  "id" SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "tipo_de_zona" varchar
);

CREATE TABLE "estados" (
  "id" SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "clave_de_estado" varchar,
  "estado" varchar
);

CREATE TABLE "catalogo_de_tipos_de_asentamientos" (
  "id" SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "clave_de_tipo_de_asentamiento" varchar,
  "tipo_de_asentamiento" varchar
);

CREATE TABLE "codigos_postales" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "codigo_postal" varchar,
  "id_oficina" integer
);

CREATE TABLE "claves_oficina" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "clave_oficina" varchar,
  "d_cp" varchar
);

CREATE TABLE "municipios" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "municipio" varchar
);

CREATE TABLE "cruce_estados_municipios" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_estado" integer,
  "id_municipio" integer,
  "clave_municipio" varchar
);

CREATE TABLE "ciudades" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ciudad" varchar
);

CREATE TABLE "cruce_ciudades_municipios" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "clave_ciudad" varchar,
  "id_ciudad" integer,
  "id_cruce_estado_municipio" integer
);

CREATE TABLE "asentamientos" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "asentamiento" varchar
);

CREATE TABLE "cruce_asentamientos_municipios" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_asentamiento" integer,
  "id_cruce_estado_municipio" integer,
  "id_asenta_cpcons" varchar,
  "id_tipo_de_asentamiento" smallint,
  "id_zona" smallint,
  "id_codigo_postal" integer
);

ALTER TABLE "codigos_postales" ADD CONSTRAINT "codigos_postales" FOREIGN KEY ("id_oficina") REFERENCES "claves_oficina" ("id");

ALTER TABLE "cruce_estados_municipios" ADD CONSTRAINT "cruce_estados_municipios" FOREIGN KEY ("id_estado") REFERENCES "estados" ("id");

ALTER TABLE "cruce_estados_municipios" ADD CONSTRAINT "cruce_estados_municipios2" FOREIGN KEY ("id_municipio") REFERENCES "municipios" ("id");

ALTER TABLE "cruce_ciudades_municipios" ADD CONSTRAINT "cruce_ciudades_municipios" FOREIGN KEY ("id_cruce_estado_municipio") REFERENCES "cruce_estados_municipios" ("id");

ALTER TABLE "cruce_ciudades_municipios" ADD CONSTRAINT "cruce_ciudades_municipios2" FOREIGN KEY ("id_ciudad") REFERENCES "ciudades" ("id");

ALTER TABLE "cruce_asentamientos_municipios" ADD CONSTRAINT "cruce_asentamientos_municipios" FOREIGN KEY ("id_asentamiento") REFERENCES "asentamientos" ("id");

ALTER TABLE "cruce_asentamientos_municipios" ADD CONSTRAINT "cruce_asentamientos_municipios2" FOREIGN KEY ("id_cruce_estado_municipio") REFERENCES "cruce_estados_municipios" ("id");

ALTER TABLE "cruce_asentamientos_municipios" ADD CONSTRAINT "cruce_asentamientos_municipios3" FOREIGN KEY ("id_tipo_de_asentamiento") REFERENCES "catalogo_de_tipos_de_asentamientos" ("id");

ALTER TABLE "cruce_asentamientos_municipios" ADD CONSTRAINT "cruce_asentamientos_municipios4" FOREIGN KEY ("id_zona") REFERENCES "catalogo_de_zonas" ("id");

ALTER TABLE "cruce_asentamientos_municipios" ADD CONSTRAINT "cruce_asentamientos_municipios5" FOREIGN KEY ("id_codigo_postal") REFERENCES "codigos_postales" ("id");